ocp_resources/deployment-waiting-room.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: waiting-room
  name: waiting-room
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: waiting-room
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: waiting-room
        deploymentconfig: waiting-room
    spec:
      containers:
      - imagePullPolicy: Always
        name: waiting-room
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      containerNames:
      - waiting-room
      from:
        kind: ImageStreamTag
        name: waiting-room:latest
    type: ImageChange
  - type: ConfigChange
