ocp_resources/service-redis-waiting-room.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: redis://{.spec.clusterIP}:{.spec.ports[?(.name=="redis")].port}
  creationTimestamp: null
  labels:
    template: redis-ephemeral-template
  name: redis-waiting-room
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    name: redis-waiting-room
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
