ocp_resources/service-waiting-room.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: waiting-room
  name: waiting-room
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: waiting-room
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
