ocp_resources/route-waiting-room.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  labels:
    app: waiting-room
  name: waiting-room
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: waiting-room
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
